crates/io/tests/snapshots/test_dot__edge_no_label.snap
---
source: crates/io/tests/test_dot.rs
expression: dot
---
digraph petgraph {
    N0[label="0"];
    N1[label="1"];
    N0 -> N1[arrowhead="normal" dir="both" arrowtail="none"];
}

