crates/io/tests/snapshots/test_dot__label_map_to_weight.snap
---
source: crates/io/tests/test_dot.rs
expression: dot
---
digraph petgraph {
    N0[label="A"];
    N1[label="B"];
    N0 -> N1[label="EDGE_LABEL"][arrowhead="normal" dir="both" arrowtail="none"];
}

