crates/io/tests/snapshots/test_dot__node_no_label.snap
---
source: crates/io/tests/test_dot.rs
expression: dot
---
digraph petgraph {
    N0;
    N1;
    N0 -> N1[label=""][arrowhead="normal" dir="both" arrowtail="none"];
}

